--- a/index.html
+++ b/index.html
@@ -15,25 +15,37 @@
   <button onclick="loadData()">Refresh</button>
   <table id="dataTable">
     <thead>
-      <tr><th>#</th><th>Name</th><th>Timestamp</th></tr>
+      <tr>
+        <th>#</th>
+        <th>Tenant ID</th>
+        <th>Name</th>
+        <th>Timestamp</th>
+      </tr>
     </thead>
     <tbody></tbody>
   </table>
+  
 
   <script>
     function loadData() {
-      fetch("http://localhost:3000/api/data")
-        .then(res => res.json())
-        .then(data => {
-          const tbody = document.querySelector("#dataTable tbody");
-          tbody.innerHTML = "";
-          data.forEach((entry, index) => {
-            const row = document.createElement("tr");
-            row.innerHTML = `<td>${index + 1}</td><td>${entry.name}</td><td>${new Date(entry.timestamp).toLocaleString()}</td>`;
-            tbody.appendChild(row);
-          });
-        });
-    }
+  fetch("http://localhost:3000/api/data")
+    .then(res => res.json())
+    .then(data => {
+      const tbody = document.querySelector("#dataTable tbody");
+      tbody.innerHTML = "";
+      data.forEach((entry, index) => {
+        const row = document.createElement("tr");
+        row.innerHTML = `
+          <td>${index + 1}</td>
+          <td>${entry.tenantId}</td>
+          <td>${entry.name}</td>
+          <td>${new Date(entry.timestamp).toLocaleString()}</td>
+        `;
+        tbody.appendChild(row);
+      });
+    });
+}
+
 
     loadData(); // on load
   </script>
